fix(typo): Fixes a few typo, and rewords some parts.

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">CLSx France</h1>
                         <p class="intro-text">Community Leadership Summit France
-                            <br>L'événement français pour les community leads
-                            <br>8 octobre 2016. Paris</p>
+                            <br>L'événement français pour les community leads.
+                            <br>8 octobre 2016 - Paris</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -109,13 +109,13 @@
                 <div class="col-lg-6">
                     <h3 class="text-center">Community Leadership Summit</h3>
                     <p>
-                    Le <a href="http://www.communityleadershipsummit.com/" target="_blank">Community Leadership Summit</a>  est un événement de partage des connaissances pour les community leaders. Il est ouvert aux novices ainsi qu'aux organisateurs chevronés afin de partager et d'apprendre les uns des autres dans l'optique de développer l'art, la science et l'activité de communty lead. Le Community Lead Summit a lieu chaque année à Portland en Oregon mais des événement locaux organisés sous le nom CLSx existent. Ces conférences reprennent le format et l'esprit du CLS.
+                    Le <a href="http://www.communityleadershipsummit.com/" target="_blank">Community Leadership Summit</a> est un événement de partage des connaissances pour les community leaders. Il est ouvert aux novices ainsi qu'aux organisateurs chevronnés afin de partager et d'apprendre les uns des autres dans l'optique de développer l'art, la science et l'activité de community lead. Le < href="http://www.communityleadershipsummit.com/">Community Leadership Summit</a> a lieu chaque année à Portland aux États-Unis, et des événements locaux organisés sous le nom CLSx existent. Ces conférences reprennent le format et l'esprit du CLS.
                     </p>
                 </div>
                 <div class="col-lg-6">
                     <h3 class="text-center">Community Leadership Summit [x] France</h3>
                     <p>
-                        CLSx France apporte le Community Leadership Summit dans la capitale française. Comme l'événement de Portland, le programme s'articule autour d'une combinaison de sessions plénières en matinée et de <a href="https://en.wikipedia.org/wiki/Unconference" target="_blank">unconferences</a> ou les participants pourront présenter lors de sessions ouvertes l'après midi.
+                        CLSx France apporte le Community Leadership Summit dans la capitale française. Comme l'événement de Portland, le programme s'articule autour d'une combinaison de sessions plénières en matinée et de <a href="https://en.wikipedia.org/wiki/Unconference" target="_blank">unconferences</a> l'après-midi durant lesquelles les participants pourront faire des présentations lors de sessions ouvertes.
                     </p>
                 </div>
             </div>
@@ -164,11 +164,11 @@
                 <h2 class="text-center">FAQ</h2>
                 <h3>Pourquoi je ne peux pas manquer l'événement ?</h3>
                 <p>
-                    C'est l'occasion de rencontrer beaucoup d'autres organisateurs de communautés afin d'échanger vos expériences et connaissances, explorer de nouveaux formats et de nouvelles idées pour vos événement et de créer des synergies innatendus.
+                    C'est l'occasion de rencontrer de nombreux autres organisateurs de communautés afin d'échanger vos expériences et connaissances, d'explorer de nouveaux formats et de nouvelles idées pour vos événements et de créer des synergies inattendues.
                 </p>
-                <h3>Puis-je venir quelque soit la communauté que j'annime ?</h3>
+                <h3>Puis-je venir quelle que soit la communauté que j'anime ?</h3>
                 <p>
-                    Le CLSx s'adresse en priorité aux personnes animant des communautés autour des technologies et du développement. Cependant, c'est un vaste domaine et peut-être une synergie est-elle possible avec ce que vous faites.
+                    Le CLSx s'adresse en priorité aux personnes animant des communautés autour des technologies et du développement logiciel. Cependant, c'est un vaste domaine et peut-être une synergie est-elle possible avec ce que vous faites.
                 </p>
                 <h3>Pourquoi est-ce payant ?</h3>
                 <p>
@@ -202,13 +202,13 @@
 
     <section id="sponsors" class="container content-section">
         <div class="row" style="padding-bottom: 50px;">
-            <h2 class="text-center">Ils supportent CLSx France</h2>
+            <h2 class="text-center">Ils soutiennent CLSx France</h2>
             <!--<img src="img/sponsors/google.png" alg="Google" />-->
         </div>
         <div class="row text-center">
             <i>The Community Leadership Summit has always had a set of key values ​​in place to create the ideal environment for sharing and learning great community best practices. This is that we will always be an open, freely accessible, vendor-neutral event, and each of our sponsors supports and respects These values ​​and contributes to help make the event happen. Thanks!</i>
             <h4 style="padding-top:30px;">
-                Si vous désirez sponsoriser l'évenement, <a href="mailto:clsxfrance@gmail.com">écrivez-nous</a>
+                Si vous désirez sponsoriser l'événement, <a href="mailto:clsxfrance@gmail.com">écrivez-nous</a>
             </h4>
         </div>
     </section>
